--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -189,6 +189,7 @@ input, select, textarea {
 	h2 {
 		font-size: 1.5em;
 		letter-spacing: 0.1em;
+		
 	}
 
 	h3 {
@@ -2590,12 +2591,13 @@ input, select, textarea {
 			-webkit-animation-fill-mode: forwards;
 			-ms-animation-fill-mode: forwards;
 			animation-fill-mode: forwards;
-			background: rgba(52, 27, 43, 0.5);
+			background: rgb(84 24 31 / 50%);
 			color: #fff;
 			display: inline-block;
 			opacity: 0;
 			padding: 3em;
 			text-align: center;
+			border-radius: 30px;
 		}
 
 			#banner .inner header {
